<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<!-- Options Menu for SearchableActivity and WordActivity.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search_type"
          android:title="@string/search_type_string"
          android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/chinese_type"
                  android:title="@string/chinese_type_string"
                  android:onClick="onChinese"/>
            <item android:id="@+id/pinyin_type"
                  android:title="@string/pinyin_type_string"
                  android:onClick="onPinYin"/>
            <item android:id="@+id/vietnamese_type"
                  android:title="@string/vietnamese_type_string"
                  android:onClick="onVietNamese"/>
            <item android:id="@+id/english_type"
                  android:title="@string/english_type_string"
                  android:onClick="onEnglish"/>
        </menu>
    </item>

</menu>
